--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+# Ignore .DS_Store files
+.DS_Store
+
 ### STS ###
 .apt_generated
 .classpath
